2003-09-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c

	Fixed warnings

	* cong-editor-area-pixbuf.c, cong-eel.c, cong-eel.h

	Removed gdk_draw_pixbuf (it required GDK 2.2, which isn't yet widespread)
		
	* cong-dispspec-registry.c, cong-dispspec-registry.h, cong-dispspec.c, cong-dispspec.h, cong-file-open.c, cong-menus.c, cong-plugin.c, global.h, main.c, plugin-dtd.c

	Support for fileformat extension hints in dispspecs; warning fixes
	
2003-09-10  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-source-view.c, cong-tree-view.c

	Yet more cleanup fixes.

	* cong-primary-window.c, cong-tree-view.c

	More cleanup fixes - CongDocument now appears to be correctly unrefed, disposed and finalised when its window is closed

2003-09-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-tree-view.c, select.c

	Cleanup fixes
	
	* cong-document.c, cong-document.h, cong-file-properties.c, cong-util.h, cursor.c

	Document cleanup fixes; beginnings of CongDocument support for attaching a DTD to a document

	* cong-dispspec.c

	Dispspec creation now stores DTD information for (i) DTD import and for (ii) dispspec autogeneration from XML if a DTD is present

	* cong-util.c, plugin-doc-from-xds.c

	Document templates now associate themselves with the DTD, if available; DTD now always appears at top of document

	* cong-dispspec.c

	Implemented access to System ID and Public ID for document models

2003-09-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-cleanup-source.c

	Now handles span vs structural tags in indentation; fix indentation for comments (bug #116823)
	
	* cong-dispspec.c, cong-enum-mapping.c, cong-enum-mapping.h

	Added output of document model info to the CongDispsepc->XML generator

	* cong-dispspec.c, cong-dispspec.h, global.h, plugin-lists-node-element-listitem.c

	Added support for document models (including DTDs) to dispspecs
