@@ -177,12 +177,12 @@ cong_cclosure_marshal_VOID__CONGNODEPTR_STRING_STRING (GClosure     *closure,
 						       gpointer      invocation_hint,
 						       gpointer      marshal_data)
 {
-  typedef void (*GMarshalFunc_VOID__CONGNODEPTR_STRING) (gpointer     data1,
-							 CongNodePtr  arg_1,
-							 const gchar *arg_2,
-							 const gchar *arg_3,
-							 gpointer     data2);
-	register GMarshalFunc_VOID__CONGNODEPTR_STRING callback;
+  typedef void (*GMarshalFunc_VOID__CONGNODEPTR_STRING_STRING) (gpointer     data1,
+								CongNodePtr  arg_1,
+								const gchar *arg_2,
+								const gchar *arg_3,
+								gpointer     data2);
+	register GMarshalFunc_VOID__CONGNODEPTR_STRING_STRING callback;
 	register GCClosure *cc = (GCClosure*) closure;
 	register gpointer data1, data2;
 	
@@ -198,10 +198,48 @@ cong_cclosure_marshal_VOID__CONGNODEPTR_STRING_STRING (GClosure     *closure,
 			data1 = g_value_peek_pointer (param_values + 0);
 			data2 = closure->data;
 		}
-	callback = (GMarshalFunc_VOID__CONGNODEPTR_STRING) (marshal_data ? marshal_data : cc->callback);
+	callback = (GMarshalFunc_VOID__CONGNODEPTR_STRING_STRING) (marshal_data ? marshal_data : cc->callback);
 	
 	callback (data1,
 		  g_value_get_pointer (param_values + 1),
+		  g_value_get_string (param_values + 2),
+		  g_value_get_string (param_values + 3),
+		  data2);
+}
+
+void 
+cong_cclosure_marshal_VOID__STRING_STRING_STRING (GClosure     *closure,
+						  GValue       *return_value,
+						  guint         n_param_values,
+						  const GValue *param_values,
+						  gpointer      invocation_hint,
+						  gpointer      marshal_data)
+{
+  typedef void (*GMarshalFunc_VOID__STRING_STRING_STRING) (gpointer     data1,
+							   const gchar *arg_1,
+							   const gchar *arg_2,
+							   const gchar *arg_3,
+							   gpointer     data2);
+	register GMarshalFunc_VOID__STRING_STRING_STRING callback;
+	register GCClosure *cc = (GCClosure*) closure;
+	register gpointer data1, data2;
+	
+	g_return_if_fail (n_param_values == 4);
+	
+	if (G_CCLOSURE_SWAP_DATA (closure))
+		{
+			data1 = closure->data;
+			data2 = g_value_peek_pointer (param_values + 0);
+		}
+	else
+		{
+			data1 = g_value_peek_pointer (param_values + 0);
+			data2 = closure->data;
+		}
+	callback = (GMarshalFunc_VOID__STRING_STRING_STRING) (marshal_data ? marshal_data : cc->callback);
+	
+	callback (data1,
+		  g_value_get_string (param_values + 1),
 		  g_value_get_string (param_values + 2),
 		  g_value_get_string (param_values + 3),
 		  data2);
