@@ -51,6 +51,12 @@ static void on_document_node_set_attribute(CongView *view, gboolean before_event
 static void on_document_node_remove_attribute(CongView *view, gboolean before_event, CongNodePtr node, const xmlChar *name);
 static void on_selection_change(CongView *view);
 static void on_cursor_change(CongView *view);
+static void on_document_set_external_dtd (CongView *view, 
+					  gboolean before_change, 
+					  const gchar* root_element,
+					  const gchar* public_id,
+					  const gchar* system_id);
+
 
 #define DEBUG_SOURCE_VIEW 0
 
@@ -284,6 +290,27 @@ static void on_cursor_change(CongView *view)
 {
 }
 
+static void on_document_set_external_dtd (CongView *view, 
+					  gboolean before_event, 
+					  const gchar* root_element,
+					  const gchar* public_id,
+					  const gchar* system_id)
+{
+	CongSourceView *source_view;
+
+	g_return_if_fail(view);
+
+	#if DEBUG_SOURCE_VIEW
+	g_message("CongSourceView - on_document_set_external_dtd");
+	#endif
+
+	source_view = CONG_SOURCE_VIEW(view);
+
+	if (!before_event) {
+		on_document_change(source_view);
+	}
+}
+
 GtkWidget *cong_source_view_new(CongDocument *doc)
 {
 	CongSourceViewDetails *details;
@@ -312,6 +339,7 @@ GtkWidget *cong_source_view_new(CongDocument *doc)
 	view->view.klass->on_document_node_remove_attribute = on_document_node_remove_attribute;
 	view->view.klass->on_selection_change = on_selection_change;
 	view->view.klass->on_cursor_change = on_cursor_change;
+	view->view.klass->on_document_set_external_dtd = on_document_set_external_dtd;
 
 	cong_document_register_view( doc, CONG_VIEW(view) );
 
